# pg-copy

./: .gitignore  Cargo.toml
src/: conn.rs  main.rs  pg2pg.rs  stats.rs
src/docs/: mod.rs
src/packit/: mod.rs  table.rs  unbin.rs  write.rs
src/pg2pg/: count.rs  mod.rs  par_dump.rs  par_par.rs  pooler.rs  ranges.rs  unbuffered.rs
