[package]
name = "pg-copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9.0"
itertools = "0.10"
log = "0.4"
native-tls = "0.2"
num-format = "0.4"
postgres = { version = "0.19", features = ["with-time-0_3"] }
postgres-native-tls = "0.5"
threadpool = "1.8"
