[package]
name = "pg-copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.0.0-rc.4", features = ["cargo"] }
dotenv = "0.15"
env_logger = "0.9.0"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
native-tls = "0.2"
num-format = "0.4"
postgres = { version = "0.19", features = ["with-time-0_3"] }
postgres-native-tls = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile-fast = "0.3"
threadpool = "1.8"
